fix text alignment in galaxy table

--- a/static/tom_targets/css/galaxy_table_format.css
+++ b/static/tom_targets/css/galaxy_table_format.css
@@ -39,3 +39,7 @@
 .supsubz sup {
     top: 0.1em;
 }
+
+.galaxies td {
+    vertical-align: bottom;
+}
